--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,25 @@
+a {
+  text-decoration: none !important;
+}
 
-a{
-    text-decoration: none !important;
+.logo {
+  width: 100px;
+  transform: scale(2.2);
+}
+
+loader {
+  overflow: hidden;
+  margin: 0 !important;
+  position: fixed;
+  top: 0;
+  right: 0;
+  flex-direction: column;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 10000000000 !important;
+  color: white;
 }
